tests/tests/snapshots/integration__run_images@crop3.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/crop3.gleam
---
<svg width="110.0" height="110.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <defs><clipPath id="clip0" ><rect x="7.320508" y="27.320508" width="40.0" height="40.0" transform="rotate(-30.0 27.320508 47.320508)" /></clipPath></defs>
      <g clip-path="url(#clip0)" >
        <path d="M 34.641016 20.0 A 40.0 40.0 -30.0 0 1 -34.641016 60.0 A 40.0 40.0 -30.0 0 1 34.641016 20.0 Z" fill="rgba(219, 112, 147, 1.0)" />
      </g>
      <defs><clipPath id="clip1" ><rect x="41.961524" y="7.320508" width="40.0" height="40.0" transform="rotate(-30.0 61.961524 27.320508)" /></clipPath></defs>
      <g clip-path="url(#clip1)" >
        <path d="M 103.923048 -20.0 A 40.0 40.0 -30.0 0 1 34.641016 20.0 A 40.0 40.0 -30.0 0 1 103.923048 -20.0 Z" fill="rgba(240, 128, 128, 1.0)" />
      </g>
    </g>
    <g>
      <defs><clipPath id="clip2" ><rect x="27.320508" y="61.961524" width="40.0" height="40.0" transform="rotate(-30.0 47.320508 81.961524)" /></clipPath></defs>
      <g clip-path="url(#clip2)" >
        <path d="M 74.641016 89.282032 A 40.0 40.0 -30.0 0 1 5.358984 129.282032 A 40.0 40.0 -30.0 0 1 74.641016 89.282032 Z" fill="rgba(240, 128, 128, 1.0)" />
      </g>
      <defs><clipPath id="clip3" ><rect x="61.961524" y="41.961524" width="40.0" height="40.0" transform="rotate(-30.0 81.961524 61.961524)" /></clipPath></defs>
      <g clip-path="url(#clip3)" >
        <path d="M 143.923048 49.282032 A 40.0 40.0 -30.0 0 1 74.641016 89.282032 A 40.0 40.0 -30.0 0 1 143.923048 49.282032 Z" fill="rgba(219, 112, 147, 1.0)" />
      </g>
    </g>
  </g>
</svg>
