tests/tests/snapshots/integration__run_images@dash1.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/dash1.gleam
---
<svg width="60.0" height="60.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 60.5 30.5 A 30.0 30.0 0.0 0 1 0.5 30.5 A 30.0 30.0 0.0 0 1 60.5 30.5 Z" fill="none" stroke="rgba(255, 0, 0, 1.0)" stroke-dasharray="6, 3" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
</svg>
