tests/tests/snapshots/integration__run_images@empty_scene1.gleam.snap
---
source: tests/tests/integration.rs
expression: "format!(\"{out}\")"
input_file: tests/tests/images/empty_scene1.gleam
---
<svg width="160.0" height="90.0" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0.0" y="0.0" width="160.0" height="90.0" transform="rotate(0.0 80.0 45.0)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <path d="M 0.0 0.0 L 160.0 0.0 L 160.0 90.0 L 0.0 90.0 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-width="2.0" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10.0" />
  </g>
</svg>
